--- a/WRIO/vertical/views/withdraw/left-view.html
+++ b/WRIO/vertical/views/withdraw/left-view.html
@@ -29,7 +29,7 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="panel active"><a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">{{balanceModel.Gs}}<span class="currency">WRG</span></span>webGold</a></li>
+                            <li class="panel active"><a href="#element3" class="collapse" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty btn-xs pull-right">{{balanceModel.GsStr}}<span class="currency">WRG</span></span>webGold</a></li>
                             <li class="new panel">
                                 <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
                                 <div class="collapse" id="element4"></div>
