--- a/WRIO/vertical/views/addFunds/center-view.html
+++ b/WRIO/vertical/views/addFunds/center-view.html
@@ -42,7 +42,7 @@ little bit.
                         </div>
                         <div class="alert alert-success" ng-show="isMsg['done']">
                             <button type="button" class="close" data-dismiss="alert">×</button>
-                            Done. You purchased {{withdrawModel.Gs}} WRG
+                            Done. You purchased  {{lastTransaction.WrgStr}} WRG 
                         </div>
                         <div class="alert alert-danger" ng-show="isMsg['error']">
                             <button type="button" class="close" data-dismiss="alert">×</button>
@@ -50,9 +50,9 @@ little bit.
                         </div>
                         <ul class="leaders">
                             <li><span>Current balance&nbsp;</span>
-                                <span>&nbsp;{{balanceModel.Gs}}<small class="currency">WRG</small><sup class="currency">{{balanceModel.Usd}} USD</sup></span></li>
+                                <span>&nbsp;{{balanceModel.WrgStr}}<small class="currency">WRG</small><sup class="currency">{{balanceModel.UsdStr}} USD</sup></span></li>
                             <li><span>Exchange rate&nbsp;</span>
-                                <span>&nbsp;10 000<small class="currency">WRG</small>=&nbsp;{{balanceModel.Currency}}<small class="currency">USD</small></span></li>
+                                <span>&nbsp;10 000<small class="currency">WRG</small>=&nbsp;{{balanceModel.CurrencyStr}}<small class="currency">USD</small></span></li>
                         </ul>
                     </div>
                     <div class="form-horizontal form-group col-xs-12">
