--- a/WRIO/vertical/views/login/right-view.html
+++ b/WRIO/vertical/views/login/right-view.html
@@ -21,7 +21,7 @@
     <div id="sign_in-carousel" class="carousel slide" data-interval="false" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
-                <form class="form-signin" role="form">
+                <form class="form-signin" role="form" method="POST" action="/Profile/Login">
                     <ul class="breadcrumb">
                         <li class="active">Sign in</li>
                         <li><a href="#sign_in-carousel" data-slide="next">Create an account</a></li>
@@ -33,17 +33,19 @@
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>The email or password you entered is incorrect
                     </div>
                     <div class="form-group">
-                        <input ng-model="signInModel.email" type="email" class="form-control" id="id-Email" placeholder="Email" required autofocus>
+                        <input ng-model="signInModel.email" name="Login" type="email" class="form-control" id="id-Email" placeholder="Email" required autofocus>
                     </div>
                     <div class="form-group">
-                        <input ng-model="signInModel.password" type="password" class="form-control" id="id-Password" placeholder="Password" required>
+                        <input ng-model="signInModel.password" name="Password" ng-click="isEmailCorrect()" type="password" class="form-control" id="id-Password" placeholder="Password" required>
                     </div>
                     <a href="#sign_in-carousel" class="pull-right" data-slide="prev">Forgot password?</a>
                     <label class="checkbox">
-                        <input ng-model="signInModel.remember" type="checkbox" value="remember-me">
+                        <input ng-model="signInModel.remember" name="RememberMe" type="checkbox">
                         Remember me
                     </label>
-                    <button ng-click="login()" class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user"></span>Sign In</button>
+                    <input name="ErrorMessage" type="hidden" />
+                    <!--<button ng-click="login()" class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user"></span>Sign In</button>-->
+                    <button class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user"></span>Sign In</button>
                 </form>
             </div>
             <div class="item">
