--- a/css/webrunes.css
+++ b/css/webrunes.css
@@ -20,7 +20,7 @@ html,body,h1,h2,h3,h4,h5,h6{font-family:Arial, "Helvetica Neue", Helvetica, sans
             .webtop li>a:hover{color:#fff;background-color:transparent}
         .main .nav>.panel .sub li a{border-radius:0;color:#aaa;font-size:12px;line-height:20px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
             .main .nav>.panel.active>a{color:#fff}
-            .main .nav>.panel .sub li.active a,.main .nav>.panel .sub li:hover a{/*background-color:#2e2e2e;*/background-color:transparent;color:#fff}
+            .main .nav>.panel .sub li.active a,.main .nav>.panel .sub li:hover a,.main .nav li:hover a span{/*background-color:#2e2e2e;*/background-color:transparent;color:#fff}
             .main .nav>.panel .sub li.active a,.main .nav>.open .sub li.active a:hover{background-color:#000}
     .main .nav>.panel.active>a,.main .nav>.panel.active>a:hover{background-color:#000}
     .main .nav>.new.active .glyphicon{opacity:1}
