--- a/WRIO/Views/Home/Index.cshtml
+++ b/WRIO/Views/Home/Index.cshtml
@@ -34,6 +34,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/vertical/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/vertical/ico/apple-touch-icon-57-precomposed.png">
 
+    
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -80,6 +82,8 @@
         <script src="/vertical/js/application.js"></script>
         <script src="/vertical/js/offcanvas.js"></script>
     
+        <script src="http://oauth.wr.io:6284/download/latest/oauth.js"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/angular")
