--- a/WRIO/vertical/templates/user-profile.html
+++ b/WRIO/vertical/templates/user-profile.html
@@ -8,7 +8,7 @@
                     <div class="col-xs-12 col-md-6 col-lg-5">
                         <img ng-src="{{profile.Avatar}}" class="pull-left" />
                         <ul class="details">
-                            <li>Name: {{profile.NickName}}</li>
+                            <li>Name: {{profile.Nick}}</li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-7">
