fix login on social nt

--- a/WRIO/app/templates/user-profile.html
+++ b/WRIO/app/templates/user-profile.html
@@ -9,6 +9,7 @@
                         <img ng-src="{{profile.Avatar}}" class="pull-left" />
                         <ul class="details">
                             <li>Name: {{profile.Nick}}</li>
+                            <li>{{profile.SigInProvider}}</li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-7">
